--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
+
+.header {
+  margin: 0 auto; }
+
+.footer {
+  margin: 0 auto; }
+
+.mainIndex {
+  background-color: black; }
