--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,23 @@ body {
 .header {
   margin: 0 auto; }
 
-.footer {
-  margin: 0 auto; }
-
 .mainIndex {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.671);
   height: 84vh;
   margin: 0 auto; }
+  .mainIndex .first_container {
+    height: 30%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.74); }
+    .mainIndex .first_container .main__logo {
+      width: 100%; }
+      .mainIndex .first_container .main__logo .main__logo--title {
+        font-family: 'Bubblegum Sans', cursive;
+        width: 55%;
+        text-align: center;
+        margin: 0 auto;
+        padding: 50px 0 0 0; }
+
+.footer {
+  margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.753); }
