--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,7 @@
 body {
     background-image: url(../img/background-body.jpg);
     background-repeat: repeat;
+    font-family: 'Hahmlet', serif;
 }
 
 // IMPORTACIONES
