--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,10 @@ body {
           padding: 30px 0 0 0;
           opacity: 80%;
           background-color: #303030;
+          transition: background-color 0.8s;
           color: white; }
           .mainIndex .second_container .row .colEdit h2:hover {
-            background-color: black;
-            opacity: 90%; }
+            background-color: black; }
 
 .mainBiblioteca {
   background-color: rgba(255, 255, 255, 0.801);
