--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -39,10 +39,10 @@
                     padding: 30px 0 0 0;
                     opacity: 80%;
                     background-color: rgb(48, 48, 48);
+                    transition: background-color 0.8s;
                     color: white;
                     &:hover {
                         background-color: rgb(0, 0, 0);
-                        opacity: 90%;
                     }
                 }
             }
