--- a/scss/_biblioteca.scss
+++ b/scss/_biblioteca.scss
@@ -1,5 +1,115 @@
 .mainBiblioteca {
     background-color: rgba(255, 255, 255, 0.801);
-    height: 84vh;
     margin: 0 auto;
+    .comicContainer {
+        width: 100%;
+        margin: 0 auto;
+        background-color: antiquewhite;
+        .row {
+            border: 1px solid black;
+            .comicThumbnail {
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 70vh;
+                a {
+                    height: 100%;
+                    width: 100%;
+                    text-decoration: none;
+                }
+                .comicThumbnail-dark {
+                    background-color: rgba(0, 0, 0, 0.85);
+                    color: white;
+                    text-align: center;
+                    text-decoration-skip: opacity;
+                    padding: 50px 0 0 0;
+                    margin: 0;
+                    width: 100%;
+                    height: 100%;
+                    transition: background-color 0.8s;
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.404);
+                    }
+                    h5 {
+                        width: 85%;
+                        margin: auto;
+                    }
+                }
+            }
+            .comicThumnail_fir {
+                background-image: url("../img/comics/amazing_spiderman.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_2 {
+                background-image: url("../img/comics/captain_america.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_3 {
+                background-image: url("../img/comics/thanos.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_4 {
+                background-image: url("../img/comics/marvel_zombies.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_5 {
+                background-image: url("../img/comics/iron_man.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_6 {
+                background-image: url("../img/comics/thor.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_7 {
+                background-image: url("../img/comics/the_avengers.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_8 {
+                background-image: url("../img/comics/the_xmen.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+            .comicThumnail_9 {
+                background-image: url("../img/comics/galactus.jpg");
+                background-repeat: no-repeat;
+                background-size: 100% 100%;
+            }
+        }
+    }
+    .nextPage_container {
+        height: 8vh;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.712);
+        border: 1px solid black;
+        .nextPage {
+            height: 100%;
+            width: 35%;
+            margin: auto;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            a {
+                text-decoration: none;
+                background-color: rgb(53, 53, 53);
+                height: 25px;
+                width: 30px;
+                text-align: center;
+                color: white;
+                border-radius: 5px;
+                font-size: 15px;
+            }
+            .activeLink {
+                background-color: rgb(29, 29, 29);
+            }
+        }
+    }
 }
