--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,20 @@
 .footer {
     margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.753);
+    background-color: rgba(44, 44, 44, 0.904);
+    border: 1px solid black;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+        text-decoration: none;
+        color: rgb(216, 216, 216);
+        &:hover {
+            color: white;
+        }
+    }
+    span {
+        font-size: 15px;
+        color: rgb(182, 179, 179);
+    }
 }
