--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,11 +11,12 @@ body {
 }
 
 .first_container {
-    height: 30%;
+    height: 25vh;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.712);
     .main__logo {
         width: 100%;
+        height: 100%;
         .main__logo--title {
             font-family: 'Bubblegum Sans', cursive;
             width: 60%;
