--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -11,18 +11,18 @@ body {
 }
 
 .first_container {
-    height: 25vh;
+    height: 30vh;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.712);
-    .main__logo {
-        width: 100%;
+    .main__logo--title {
+        font-family: 'Bubblegum Sans', cursive;
+        width: 60%;
         height: 100%;
-        .main__logo--title {
-            font-family: 'Bubblegum Sans', cursive;
-            width: 60%;
-            text-align: center;
-            margin: 0 auto;
-            padding: 50px 0 0 0;
-        }
+        text-align: center;
+        margin: 0 auto;
+        // padding: 50px 0 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 }
