--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,9 +1,9 @@
 .mainIndex {
     background-color: rgba(255, 255, 255, 0.801);
-    height: 85vh;
+    height: auto;
     margin: 0 auto;
     .second_container {
-        height: 60vh;
+        height: 54vh;
         .row {
             height: 100%;
             .col {
