--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,7 @@
     height: auto;
     margin: 0 auto;
     .second_container {
-        height: 54vh;
+        height: 55vh;
         .row {
             height: 100%;
             .col {
@@ -27,25 +27,23 @@
                 height: 25%;
                 background-color: rgb(48, 48, 48);
                 padding: 0;
-                a {
-                    width: 100%;
-                    text-decoration: none;
-                }
-                h2 {
+                .colClick {
+                    cursor: pointer;
                     height: 100%;
-                    width: 100%;
-                    text-align: center;
-                    margin: 0 auto;
-                    padding: 30px 0 0 0;
-                    opacity: 80%;
-                    background-color: rgb(48, 48, 48);
+                    padding: 30px 0;
+                    background-color: rgba(48, 48, 48, 0.80);
                     transition: background-color 0.8s;
-                    color: white;
                     &:hover {
-                        background-color: rgb(0, 0, 0);
-                        opacity: 90%;
+                        background-color: rgba(0, 0, 0, 0.90);
                     }
-                }
+                    h2 {
+                        // height: 100%;
+                        width: 70%;
+                        text-align: center;
+                        margin: 0 auto;
+                        color: white;
+                    }
+                }         
             }
         }
     }
