--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,6 +1,7 @@
 .mainIndex {
     background-color: rgba(255, 255, 255, 0.801);
     height: auto;
+    min-height: 84vh;
     margin: 0 auto;
     .second_container {
         height: 55vh;
