--- a/scss/_personajes.scss
+++ b/scss/_personajes.scss
@@ -1,5 +1,5 @@
 .mainPersonajes {
     background-color: rgba(255, 255, 255, 0.801);
-    height: 84vh;
+    min-height: 84vh;
     margin: 0 auto;
 }
