Fixing responsive errors

--- a/scss/_biblioteca.scss
+++ b/scss/_biblioteca.scss
@@ -2,6 +2,9 @@
     background-color: rgba(255, 255, 255, 0.801);
     margin: 0 auto;
     min-height: 84vh;
+    .first_container {
+        height: 30vh;
+    }
     .comicContainer {
         width: 100%;
         margin: 0 auto;
