--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
     margin: 0 auto;
     background-color: rgba(44, 44, 44, 0.904);
     border: 1px solid black;
-    height: 8vh;
+    height: 7%;
     display: flex;
     justify-content: center;
     align-items: center;
