--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@
 body {
   background-image: url(../img/background-body.jpg);
   background-repeat: repeat;
-  font-family: 'Hahmlet', serif; }
+  font-family: 'Hahmlet', serif;
+  height: 100vh; }
 
 .first_container {
-  height: 30vh;
+  height: 30%;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.712); }
   .first_container .main__logo--title {
@@ -23,15 +24,18 @@ body {
     justify-content: center; }
 
 .header {
-  margin: 0 auto; }
+  margin: 0 auto;
+  height: 7%; }
+  .header nav {
+    height: 100%; }
 
 .mainIndex {
   background-color: rgba(255, 255, 255, 0.801);
   height: auto;
-  min-height: 84vh;
+  height: 86%;
   margin: 0 auto; }
   .mainIndex .second_container {
-    height: 55vh; }
+    height: 70%; }
     .mainIndex .second_container .row {
       height: 100%; }
       .mainIndex .second_container .row .col {
@@ -52,6 +56,8 @@ body {
         padding: 0; }
         .mainIndex .second_container .row .colEdit .colClick {
           cursor: pointer;
+          display: flex;
+          align-items: center;
           height: 100%;
           padding: 30px 0;
           background-color: rgba(48, 48, 48, 0.8);
@@ -68,6 +74,8 @@ body {
   background-color: rgba(255, 255, 255, 0.801);
   margin: 0 auto;
   min-height: 84vh; }
+  .mainBiblioteca .first_container {
+    height: 30vh; }
   .mainBiblioteca .comicContainer {
     width: 100%;
     margin: 0 auto;
@@ -172,7 +180,9 @@ body {
 .mainComics {
   background-color: rgba(255, 255, 255, 0.904);
   margin: 0 auto;
-  min-height: 84vh; }
+  min-height: 86vh; }
+  .mainComics .first_container {
+    height: 30vh; }
   .mainComics .container-fluid {
     padding: 0; }
     .mainComics .container-fluid .row {
@@ -223,7 +233,7 @@ body {
   margin: 0 auto;
   background-color: rgba(44, 44, 44, 0.904);
   border: 1px solid black;
-  height: 8vh;
+  height: 7%;
   display: flex;
   justify-content: center;
   align-items: center; }
