--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -8,10 +8,11 @@ body {
     background-image: url(../img/background-body.jpg);
     background-repeat: repeat;
     font-family: 'Hahmlet', serif;
+    height: 100vh;
 }
 
 .first_container {
-    height: 30vh;
+    height: 30%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.712);
     .main__logo--title {
