--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,10 +1,10 @@
 .mainIndex {
     background-color: rgba(255, 255, 255, 0.801);
     height: auto;
-    min-height: 84vh;
+    height: 86%;
     margin: 0 auto;
     .second_container {
-        height: 55vh;
+        height: 70%;
         .row {
             height: 100%;
             .col {
@@ -30,6 +30,8 @@
                 padding: 0;
                 .colClick {
                     cursor: pointer;
+                    display: flex;
+                    align-items: center;
                     height: 100%;
                     padding: 30px 0;
                     background-color: rgba(48, 48, 48, 0.80);
