Adding variable scss files

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,10 @@
 // IMPORTACIONES
 
+@import "variables";
+@import "extend";
+@import "mixin";
+@import "maps";
+
 @import "general";
 @import "header";
 
