Converting the about.html file to info.html

--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ body {
   min-height: 84vh;
   margin: 0 auto; }
 
-.mainAbout {
+.mainInfo {
   background-color: rgba(255, 255, 255, 0.801);
   height: 86%;
   margin: 0 auto; }
