--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-.mainComics .container-fluid .row .comicExplain .comicExplainContainer h3, .mainInfo .infoBigContainer .infoContainer h3 {
+.mainComics .container-fluid .row .comicExplain .comicExplainContainer h3, .mainCharacter .container-fluid .row .characterExplain .characterExplainContainer h3, .mainInfo .infoBigContainer .infoContainer h3 {
   padding: 20px 0 0 0; }
 
-.mainComics .container-fluid .row .comicExplain .comicExplainContainer p, .mainInfo .infoBigContainer .infoContainer p {
+.mainComics .container-fluid .row .comicExplain .comicExplainContainer p, .mainCharacter .container-fluid .row .characterExplain .characterExplainContainer p, .mainInfo .infoBigContainer .infoContainer p {
   padding: 10px 0 0 0; }
 
 .spanLorem {
@@ -234,8 +234,141 @@ body {
 
 .mainPersonajes {
   background-color: rgba(255, 255, 255, 0.801);
-  min-height: 84vh;
-  margin: 0 auto; }
+  margin: 0 auto;
+  min-height: 84vh; }
+  .mainPersonajes .first_container {
+    height: 30vh; }
+  .mainPersonajes .characterContainer {
+    width: 100%;
+    margin: 0 auto;
+    background-color: antiquewhite; }
+    .mainPersonajes .characterContainer .row {
+      border: 1px solid black; }
+      .mainPersonajes .characterContainer .row .characterThumbnail {
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 70vh; }
+        .mainPersonajes .characterContainer .row .characterThumbnail a {
+          height: 100%;
+          width: 100%;
+          text-decoration: none; }
+        .mainPersonajes .characterContainer .row .characterThumbnail .characterThumbnail-dark {
+          background-color: rgba(0, 0, 0, 0.85);
+          color: white;
+          text-align: center;
+          text-decoration-skip: opacity;
+          padding: 50px 0 0 0;
+          margin: 0;
+          width: 100%;
+          height: 100%;
+          transition: background-color 0.8s; }
+          .mainPersonajes .characterContainer .row .characterThumbnail .characterThumbnail-dark:hover {
+            background-color: rgba(0, 0, 0, 0.404); }
+          .mainPersonajes .characterContainer .row .characterThumbnail .characterThumbnail-dark h5 {
+            width: 85%;
+            margin: auto; }
+  .mainPersonajes .nextPage_container {
+    height: 8vh;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.712);
+    border: 1px solid black; }
+    .mainPersonajes .nextPage_container .nextPage {
+      height: 100%;
+      width: 35%;
+      margin: auto;
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center; }
+      .mainPersonajes .nextPage_container .nextPage a {
+        text-decoration: none;
+        background-color: #353535;
+        height: 25px;
+        width: 30px;
+        text-align: center;
+        color: white;
+        border-radius: 5px;
+        font-size: 15px; }
+      .mainPersonajes .nextPage_container .nextPage .activeLink {
+        background-color: #1d1d1d; }
+
+.mainCharacter {
+  background-color: rgba(255, 255, 255, 0.904);
+  margin: 0 auto;
+  min-height: 86vh; }
+  .mainCharacter .first_container {
+    height: 30vh; }
+  .mainCharacter .container-fluid {
+    padding: 0; }
+    .mainCharacter .container-fluid .row {
+      margin: 0; }
+      .mainCharacter .container-fluid .row .characterBigContainer {
+        padding: 0;
+        border: 1px solid black; }
+        .mainCharacter .container-fluid .row .characterBigContainer .characterTitle {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          height: 40vh;
+          margin: 0; }
+          .mainCharacter .container-fluid .row .characterBigContainer .characterTitle h5 {
+            text-align: center;
+            color: black;
+            font-weight: bold;
+            margin: 0; }
+          .mainCharacter .container-fluid .row .characterBigContainer .characterTitle p {
+            margin: 12px 0 0 0; }
+          @media (min-width: 768px) {
+            .mainCharacter .container-fluid .row .characterBigContainer .characterTitle {
+              height: 445px; } }
+          @media (min-width: 1024px) {
+            .mainCharacter .container-fluid .row .characterBigContainer .characterTitle {
+              height: 40vh; } }
+      .mainCharacter .container-fluid .row .characterExplain {
+        padding: 0;
+        border-top: 1px solid black;
+        border-right: 1px solid black;
+        border-bottom: 1px solid black; }
+        .mainCharacter .container-fluid .row .characterExplain .characterExplainContainer {
+          width: 90%;
+          height: 100%;
+          margin: 0 auto; }
+  .mainCharacter .characterThumbnail {
+    height: 60vh;
+    width: 100%; }
+
+.characterThumnail_1 {
+  background-image: url("../img/characters/black_widow.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
+
+.characterThumnail_2 {
+  background-image: url("../img/characters/captain_america.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
+
+.characterThumnail_3 {
+  background-image: url("../img/characters/deadpool.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
+
+.characterThumnail_4 {
+  background-image: url("../img/characters/hawkeye.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
+
+.characterThumnail_5 {
+  background-image: url("../img/characters/hulk.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
+
+.characterThumnail_6 {
+  background-image: url("../img/characters/iron_man.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%; }
 
 .mainInfo {
   background-color: rgba(255, 255, 255, 0.801);
