--- a/scss/_personajes.scss
+++ b/scss/_personajes.scss
@@ -1,5 +1,148 @@
 .mainPersonajes {
     background-color: rgba(255, 255, 255, 0.801);
-    min-height: 84vh;
     margin: 0 auto;
+    min-height: 84vh;
+    .first_container {
+        height: 30vh;
+    }
+    .characterContainer {
+        width: 100%;
+        margin: 0 auto;
+        background-color: antiquewhite;
+        .row {
+            border: 1px solid black;
+            .characterThumbnail {
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 70vh;
+                a {
+                    height: 100%;
+                    width: 100%;
+                    text-decoration: none;
+                }
+                .characterThumbnail-dark {
+                    background-color: rgba(0, 0, 0, 0.85);
+                    color: white;
+                    text-align: center;
+                    text-decoration-skip: opacity;
+                    padding: 50px 0 0 0;
+                    margin: 0;
+                    width: 100%;
+                    height: 100%;
+                    transition: background-color 0.8s;
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.404);
+                    }
+                    h5 {
+                        width: 85%;
+                        margin: auto;
+                    }
+                }
+            }
+        }
+    }
+    .nextPage_container {
+        height: 8vh;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.712);
+        border: 1px solid black;
+        .nextPage {
+            height: 100%;
+            width: 35%;
+            margin: auto;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            a {
+                text-decoration: none;
+                background-color: rgb(53, 53, 53);
+                height: 25px;
+                width: 30px;
+                text-align: center;
+                color: white;
+                border-radius: 5px;
+                font-size: 15px;
+            }
+            .activeLink {
+                background-color: rgb(29, 29, 29);
+            }
+        }
+    }
+}
+
+.mainCharacter {
+    background-color: rgba(255, 255, 255, 0.904);
+    margin: 0 auto;
+    min-height: 86vh;
+    .first_container {
+        height: 30vh;
+    }
+    .container-fluid {
+        padding: 0;
+        .row {
+            margin: 0;
+            .characterBigContainer {
+                padding: 0;
+                border: 1px solid black;
+                .characterTitle {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    height: 40vh;
+                    margin: 0;
+                    h5 {
+                        text-align: center;
+                        color: black;
+                        font-weight: bold;
+                        margin: 0;
+                    }
+                    p {
+                        margin: 12px 0 0 0;
+                    }
+                    @media (min-width: 768px) {
+                        height: 445px;
+                    }
+                    @media (min-width: 1024px) {
+                        height: 40vh;
+                    }
+                }
+            }
+            .characterExplain {
+                padding: 0; 
+                border-top: 1px solid black;
+                border-right: 1px solid black;
+                border-bottom: 1px solid black;
+                .characterExplainContainer {
+                    @include contenedor();
+                }
+            }
+        }
+    }
+    .characterThumbnail {
+        height: 60vh;
+        width: 100%;
+    }
+}
+
+.characterThumnail_1 {
+    @include characterThumbnail (url("../img/characters/black_widow.jpg"))
+}
+.characterThumnail_2 {
+    @include characterThumbnail (url("../img/characters/captain_america.jpg"))
+}
+.characterThumnail_3 {
+    @include characterThumbnail (url("../img/characters/deadpool.jpg"))
+}
+.characterThumnail_4 {
+    @include characterThumbnail (url("../img/characters/hawkeye.jpg"))
+}
+.characterThumnail_5 {
+    @include characterThumbnail (url("../img/characters/hulk.jpg"))
+}
+.characterThumnail_6 {
+    @include characterThumbnail (url("../img/characters/iron_man.jpg"))
 }
