--- a/scss/_biblioteca.scss
+++ b/scss/_biblioteca.scss
@@ -44,35 +44,8 @@
             }
         }
     }
-    .nextPage_container {
-        height: 8vh;
-        width: 100%;
-        background-color: rgba(255, 255, 255, 0.712);
-        border: 1px solid black;
-        .nextPage {
-            height: 100%;
-            width: 35%;
-            margin: auto;
-            display: flex;
-            justify-content: space-evenly;
-            align-items: center;
-            a {
-                text-decoration: none;
-                background-color: rgb(53, 53, 53);
-                height: 25px;
-                width: 30px;
-                text-align: center;
-                color: white;
-                border-radius: 5px;
-                font-size: 15px;
-            }
-            .activeLink {
-                background-color: rgb(29, 29, 29);
-            }
-        }
-    }
 }
-.comicThumnail_fir {
+.comicThumnail_1 {
     background-image: url("../img/comics/amazing_spiderman.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
