--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -14,13 +14,13 @@
                 background-image: url("../img/fir_img.jpg");
             }
             .sec_row {
-                background-image: url("../img/background-sec_container.jpg");
+                background-image: url("../img/sec_img.jpg");
             }
             .thi_row {
-                background-image: url("../img/venom.jpg");
+                background-image: url("../img/thi_img.jpg");
             }
             .fou_row {
-                background-image: url("../img/fou_img.png");
+                background-image: url("../img/fou_img.jpg");
             }
             .colEdit {
                 width: 100%;
